build(降低jdk版本): jdk21 -> jdk8
使用到的特性包括： 1. stream 2. switch 3. List