@@ -10,6 +10,7 @@ import java.time.ZoneOffset;
 import java.util.List;
 import java.util.Optional;
 import java.util.concurrent.atomic.AtomicInteger;
+import java.util.stream.Collectors;
 
 import static io.eeaters.delivery.core.util.UnitUtils.localDateTimeToSecond;
 
@@ -49,7 +50,7 @@ public interface SFCreateDeliveryReqConverter {
                     productNum.addAndGet(info.getProductNum());
                 })
                 .map(SFCreateDeliveryReqConverter::convertProduct)
-                .toList();
+                .collect(Collectors.toList());
 
         SFCreateDeliveryReq.OrderDetail orderDetail = new SFCreateDeliveryReq.OrderDetail();
         orderDetail.setProductType(productType);
